completed swagger files
