# docs/swagger.json
@@ -18,7 +18,34 @@
     "host": "cdn.omaxplatform.com:9541",
     "basePath": "/api/v1",
     "paths": {
-        "/": {
+        "/buckets": {
+            "get": {
+                "description": "Gets buckets data with pagination.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bucket"
+                ],
+                "summary": "Get buckets paginated data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/requests.successGetBucketListRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/requests.failureGetBucketListRequest"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Adds a new object to bucket with the given details.",
                 "consumes": [
@@ -55,35 +82,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/requests.failurePutObjectRequest"
-                        }
-                    }
-                }
-            }
-        },
-        "/buckets": {
-            "get": {
-                "description": "Gets buckets data with pagination.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Bucket"
-                ],
-                "summary": "Get buckets paginated data",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/requests.successGetBucketListRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/requests.failureGetBucketListRequest"
                         }
                     }
                 }
@@ -206,6 +204,49 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete an object with the file.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Object"
+                ],
+                "summary": "Delete object",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucket",
+                        "name": "bucket",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "file",
+                        "name": "file",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/requests.successRemoveObjectRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/requests.failureRemoveObjectRequest"
+                        }
+                    }
+                }
             }
         },
         "/buckets/:bucket/objects": {
@@ -282,6 +323,51 @@
                 }
             }
         },
+        "/buckets/:bucket/objects/:object": {
+            "delete": {
+                "description": "Delete a tag with the given object.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Object"
+                ],
+                "summary": "Delete tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucket",
+                        "name": "bucket",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "object",
+                        "name": "object",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/requests.successRemoveTagRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/requests.failureRemoveTagRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/buckets/:bucket/tags/:tag": {
             "get": {
                 "description": "Gets tag data.",
@@ -322,96 +408,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/requests.failureGetTagRequest"
-                        }
-                    }
-                }
-            }
-        },
-        "/storage/buckets/:bucket/files/:file": {
-            "delete": {
-                "description": "Delete an object with the file.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Object"
-                ],
-                "summary": "Delete object",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "bucket",
-                        "name": "bucket",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "file",
-                        "name": "file",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/requests.successRemoveObjectRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/requests.failureRemoveObjectRequest"
-                        }
-                    }
-                }
-            }
-        },
-        "/storage/buckets/:bucket/objects/:object": {
-            "delete": {
-                "description": "Delete a tag with the given object.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Object"
-                ],
-                "summary": "Delete tag",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "bucket",
-                        "name": "bucket",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "object",
-                        "name": "object",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/requests.successRemoveTagRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/requests.failureRemoveTagRequest"
                         }
                     }
                 }
